# mentproj1

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  docker-compose.yaml  dockerfile  manage.py  pyproject.toml  pytest.ini  req.txt
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
ment/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
ment/ment/: asgi.py  settings.py  urls.py
ment/posts/: views.py
ment/users/: urls.py  views.py
menti/: aiohttsp.py
menti/categories/: models.py  serializers.py  urls.py  views.py
menti/categories/migrations/: 0001_initial.py
menti/ment/: settings.py  urls.py  wsgi.py
menti/posts/: models.py  serializers.py  urls.py  views.py
menti/posts/migrations/: 0001_initial.py  (+1 more)
menti/subscriptions/: admin.py  models.py  urls.py  views.py
menti/tags/: models.py  serializers.py  urls.py  views.py
menti/users/: models.py  urls.py  views.py
posts/: models.py  serializers.py  test_model.py  test_views.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_author_alter_post_categories_and_more.py  0003_alter_post_tags.py  0004_alter_post_tags.py
subscriptions/: admin.py  models.py  tasks.py  urls.py  views.py
subscriptions/migrations/: 0001_initial.py
tags/: models.py  serializers.py  urls.py  views.py
tags/migrations/: 0001_initial.py
users/: urls.py  views.py
users/migrations/: 0001_initial.py  0002_delete_profile.py
(+4 files in other folders)
